@@ -2951,9 +2951,10 @@ NAMETAB indiv_attraccess_nametab[] =
     {"case",                1,  CA_PUBLIC,  AF_CASE},
     {"hidden",              1,  CA_WIZARD,  AF_MDARK},
     {"html",                2,  CA_PUBLIC,  AF_HTML},
-    {"no_parse",            4,  CA_PUBLIC,  AF_NOPARSE},
     {"no_command",          4,  CA_PUBLIC,  AF_NOPROG},
     {"no_inherit",          4,  CA_PUBLIC,  AF_PRIVATE},
+    {"no_name",             4,  CA_PUBLIC,  AF_NONAME},
+    {"no_parse",            4,  CA_PUBLIC,  AF_NOPARSE},
     {"regexp",              1,  CA_PUBLIC,  AF_REGEXP},
     {"trace",               1,  CA_PUBLIC,  AF_TRACE},
     {"visual",              1,  CA_PUBLIC,  AF_VISUAL},
